# painter

./: CMakeLists.txt  README.md
src/: main.cpp  painter.cpp  painter.hpp  painterapplication.cpp  painterapplication.hpp  stroke.cpp  stroke.hpp  texturemaker.cpp  texturemaker.hpp
